# 3dChessInC

./: .gitattributes  .gitignore  .gitmodules  3d chess.txt  CMakeLists.txt  README.md  board.c  game_state.h  initialize.c  main.c
Google_tests/: CMakeLists.txt  test_main.c  test_main.cpp
Google_tests/lib/: CMakeLists.txt
db/: 3DChess.db
docs/: README.md
include/: CMakeLists.txt  board.h  board_group.h  cli.h  constants.h  coordinates.h  game.h  game_state.h  save_file.h  sql_driver.h
old_files/: CMakeLists.txt
scripts/: initialize_move_database.py
src/: CMakeLists.txt  board.c  board_group.c  cli.c  constants.c  coordinates.c  game.c  game_state.c  save_file.c  sql_driver.c
tests/: test_board.cpp  test_board_group.cpp  test_coordinates.cpp  test_game_state.cpp  test_main.c  test_main.cpp  test_sql_driver.c  test_sql_driver.cpp
